<resources>
    <string name="app_name">Quizario</string>
    <string name="reward_received">Reward received</string>
    <string name="start">Start</string>
    <string name="level">Level:</string>
    <string name="_continue">Continue</string>
    <string name="restore">Restore</string>
    <string name="back">Back</string>
    <string name="x">X</string>
    <string name="block">🔒</string>
    <string name="gameplay_text">"Gameplay!\n
        The game has 20 levels, each of them has its own unique task, which is displayed before the start of the level. In order to pass the level you need to give the correct answer 20 times. Having passed the first level you can proceed to the second, having passed the second - to the third and so on. If you do not complete a level and close the game, your progress will be lost.
        For every wrong answer, you lose a life, lives can be restored by watching advertisements. The maximum reserve of lives is restored immediately - 10 units.
        I wish you good luck and new knowledge, I really hope you enjoy the game!"</string>
    <string name="finish_game">Congratulations!\nThe game is completed.</string>
    <string name="select_level">Select level</string>
    <string name="restore_lives">"You've run out of lives! To restore your maximum number of lives, click the “Restore” button and watch the ad."</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="_11">11</string>
    <string name="_12">12</string>
    <string name="_13">13</string>
    <string name="_14">14</string>
    <string name="_15">15</string>
    <string name="_16">16</string>
    <string name="_17">17</string>
    <string name="_18">18</string>
    <string name="_19">19</string>
    <string name="_20">20</string>
    <string name="exercise_level1">Choose the number that is higher. Questions can be repeated until you score 20 points</string>
    <string name="exercise_level2">Choose a card with an edible item. Questions can be repeated until you score 20 points</string>
    <string name="exercise_level3">Choose a card with a predatory animal. Questions can be repeated until you score 20 points</string>
    <string name="exercise_level4">Choose an object whose mass is greater. Questions can be repeated until you score 20 points</string>
    <string name="exercise_level5">Choose the animal that is faster. Questions can be repeated until you score 20 points</string>
    <string name="exercise_level6">Choose a fruit card. Questions can be repeated until you score 20 points </string>
    <string name="exercise_level7">Choose a subject for sports. Questions can be repeated until you score 20 points</string>
    <string name="exercise_level8">Choose a card with an animal that a person has tamed. Questions can be repeated until you score 20 points</string>
    <string name="exercise_level9">Choose a card with a non-existent character or item. Questions can be repeated until you score 20 points</string>
    <string name="exercise_level10">Choose a card with an object that is made of metal. Questions can be repeated until you score 20 points</string>
    <string name="exercise_level11">Choose the roman number that is higher. Questions can be repeated until you score 20 points</string>
    <string name="exercise_level12">Choose a card with an animal that lays eggs. Questions can be repeated until you score 20 points</string>
    <string name="exercise_level13">Choose a card with the planet that is larger. Questions can be repeated until you score 20 points</string>
    <string name="exercise_level14">Choose a card with an even number. Questions can be repeated until you score 20 points</string>
    <string name="exercise_level15">Choose a card with an animal that can fly. Questions can be repeated until you score 20 points</string>
    <string name="exercise_level16">Choose a card with a planet that is closer to the sun. Questions can be repeated until you score 20 points</string>
    <string name="exercise_level17">Choose a card with a number that is divisible by 3 without a remainder. Questions can be repeated until you score 20 points</string>
    <string name="exercise_level18">Choose a card with an animal that can swim. Questions can be repeated until you score 20 points</string>
    <string name="exercise_level19">Choose a card with a vehicle that has a mechanical or electric motor. Questions can be repeated until you score 20 points</string>
    <string name="exercise_level20">Choose a card with a team sport. Questions can be repeated until you score 20 points</string>
    <string name="level_1">Level 1</string>
    <string name="level_2">Level 2</string>
    <string name="level_3">Level 3</string>
    <string name="level_4">Level 4</string>
    <string name="level_5">Level 5</string>
    <string name="level_6">Level 6</string>
    <string name="level_7">Level 7</string>
    <string name="level_8">Level 8</string>
    <string name="level_9">Level 9</string>
    <string name="level_10">Level 10</string>
    <string name="level_11">Level 11</string>
    <string name="level_12">Level 12</string>
    <string name="level_13">Level 13</string>
    <string name="level_14">Level 14</string>
    <string name="level_15">Level 15</string>
    <string name="level_16">Level 16</string>
    <string name="level_17">Level 17</string>
    <string name="level_18">Level 18</string>
    <string name="level_19">Level 19</string>
    <string name="level_20">Level 20</string>
    <string name="interesting_fact_level1">"Congratulations, you've completed the level!\n
        Different Cultures Discovered Zero at Different Times. The idea of zero as a number was invented throughout the world at different times in history. Despite this scattered adoption, it's generally accepted that the Indian astronomer and mathematician Brahmagupta brought up the concept of zero for the first time, around 600 A.D."</string>
    <string name="interesting_fact_level2">"Congratulations, you've completed the level!\n
        Brazil is the champion orange growing country. The USA, Mexico, India and Japan are trying to keep up with the record holder. In subtropical Brazil, there are no low temperatures, which contributes to the breakdown of chlorophyll in the peel of the fruit. Therefore, even ripe fruit is both yellow and green. This is hard for consumers to understand, so imported oranges are treated with ethylene to remove chlorophyll and give them an orange color. Thus, color is not an indicator of fruit maturity."</string>
    <string name="interesting_fact_level3">"Congratulations, you've completed the level!\n
        Pandas do not have a special place to sleep - no bed, no nest. Therefore, they fall asleep where they were at the time of fatigue. And if the dream overcame them at the moment when they climbed the tree, well, so be it."</string>
    <string name="interesting_fact_level4">"Congratulations, you've completed the level!\n
        Our planet Earth is not a ball! The radius of the Earth at the equator is 21 kilometers greater than the polar radius. That is why the weight of the same object differs in different parts of the planet. Following the principles of universal gravitation, we can understand that objects become heaviest at the poles of our planet, and lightest at the equator."</string>
    <string name="interesting_fact_level5">"Congratulations, you've completed the level!\n
        The peregrine falcon is the fastest bird and the fastest animal in the world. Its diving speed exceeds 300 km/h, and the maximum possible speed reaches an incredible 390 km/h."</string>
    <string name="interesting_fact_level6">"Congratulations, you've completed the level!\n
        Japanese melon is the most expensive fruit in the world. Two Japanese Yubari melons sold at auction for $23,500. Residents of Japan pay huge amounts of money for luxurious fruits."</string>
    <string name="interesting_fact_level7">"Congratulations, you've completed the level!\n
        How do synchronized swimmers hear music underwater? To ensure that synchronized swimmers do not get confused during performances and hear music even under water, special underwater speakers are built into the pool. "</string>
    <string name="interesting_fact_level8">"Congratulations, you've completed the level!\n
        Dogs have very sensitive noses, but not as sensitive as cows. Ordinary domestic cows can detect odors at a distance of up to ten kilometers."</string>
    <string name="interesting_fact_level9">"Congratulations, you've completed the level!\n
        Yeti is one of the names of Bigfoot. Scientists have been trying to find real facts of its existence for more than 60 years, but so far have been unsuccessful. If we assume that yetis exist, then they should be humanoid creatures up to 3 meters tall, walking on two hind legs and covered with thick hair."</string>
    <string name="interesting_fact_level10">"Congratulations, you've completed the level!\n
        Lithium is the lightest metal in the world, its density is 0.534 g/cm3. If you put a piece of lithium in a glass of water, it will remain floating on the surface. By comparison, lithium is 42 times lighter than osmium, which is the densest metal known to mankind."</string>
    <string name="interesting_fact_level11">"Congratulations, you've completed the level!\n
        Zero Is the Only Number That Can't Be Represented In Roman Numerals. Isn't a number because you couldn't divide by zero. While the ancient Greeks were aware of zero as a concept, they didn't consider zero to be a number at all. For example, Aristotle decided zero wasn't a number because you couldn't divide by zero. Instead of a Roman numeral, the Latin word "nulla" would have been used to represent the concept of zero. The reason no numeral existed for zero is because there was no need for a numeral to represent it."</string>
    <string name="interesting_fact_level12">"Congratulations, you've completed the level!\n
        Each species of turtle lays its eggs on land. This may not seem crazy - until you consider that there are over 300 species of turtles! Of course, their egg-laying habits may vary slightly, but all turtles lay their eggs on land. For example, leatherback turtles will migrate thousands of kilometers just to lay their eggs! They will return to the same beach where they were born and lay their own eggs."</string>
    <string name="interesting_fact_level13">"Congratulations, you've completed the level!\n
        Not so long ago, Pluto was one of the planets of the solar system, but scientists changed its status, and now it is considered a dwarf planet. Of all the currently known dwarf planets, only Pluto has an atmosphere."</string>
    <string name="interesting_fact_level14">"Congratulations, you've completed the level!\n
        It is enough to simply divide single-digit numbers by two and determine whether they are even or odd. What about multi-digit numbers? Let's share a secret! You can figure out what a number is by looking at its last digits. If a multi-digit number ends with the digits 0, 2, 4, 6, 8, it is even. If a multi-digit number ends with one of the following digits 1,3,5,7,9, the number you have is odd."</string>
</resources>