<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/my_preview_dialog_constraint"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="@dimen/middle_size_indent_16dp"
    android:layout_marginEnd="@dimen/middle_size_indent_16dp"
    android:background="@drawable/im_back_dialog_preview">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_close_dialog"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/middle_size_indent_16dp"
        android:padding="10dp"
        android:text="@string/x"
        android:textColor="@color/black_95"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/black_60"
        app:strokeWidth="2dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:paddingStart="@dimen/middle_size_indent_16dp"
        android:paddingEnd="@dimen/middle_size_indent_16dp"
        android:src="@drawable/im_two_cards_mini"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/middle_size_indent_16dp"
            android:layout_marginEnd="@dimen/middle_size_indent_16dp"
            android:fontFamily="@font/didact_gothic_regular"
            android:text="@string/exercise_level1"
            android:textColor="@color/black_95"
            android:textSize="@dimen/middle_size_font_24sp" />

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_continue"
        style="@style/my_button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/xlarge_size_indent_32dp"
        android:layout_marginBottom="@dimen/middle_size_indent_16dp"
        android:text="@string/_continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scroll_view" />


</androidx.constraintlayout.widget.ConstraintLayout>